# website

./: .envrc.template  .gitignore  .htaccess  README.md  about.html  contact.html  contact_form.php  get_journal_entries.php  get_journal_entries_on_date.php  get_random_journal_entry.php  gratitude-journal.html  index.html  plan-2.md  plan.md  projects.html  resume.html  setup-instructions.md
base-html-files/: footer.html  gratitude-header.html  header.html
css/: about.css  base.css  contact.css  gratitude-journal.css  home.css  projects.css  resume.css
facebook-misinformation-detector/: check-for-misinfo.php
gratitude-journal/: read.html
gratitude_journal_api/: README.md  auth.py  config.py  create_hash.py  journal.py  main.py  models.py  pyproject.toml  requirements.txt
gratitude_journal_api/tests/: __init__.py  test_main.py
resume-html-files/: 1.html  2.html  config.js  index.html  search.json
