[project]
name = "gratitude-journal-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.9",
    "datetime>=6.0",
    "fastapi>=0.135.3",
    "pandas>=3.0.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.24",
    "redis>=7.4.0",
    "uvicorn>=0.43.0",
]
